feat: complete backend - WebSocket messaging, profile API, attendance, sprint CRUD, JWT auth, DB seed