@@ -16,10 +16,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import org.springframework.beans.factory.annotation.Value;
 import java.util.Arrays;
+import java.util.List;
+
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity   // enables @PreAuthorize on @MessageMapping and REST methods
 public class SecurityConfig {
 
     @Autowired
@@ -37,30 +42,46 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Public
+                // Allow CORS preflight
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // Public endpoints
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers("/api/health/**").permitAll()
+                .requestMatchers("/api/setup/**").permitAll()
+                // Swagger UI + OpenAPI spec
+                .requestMatchers(
+                    "/swagger-ui.html",
+                    "/swagger-ui/**",
+                    "/v3/api-docs",
+                    "/v3/api-docs/**",
+                    "/swagger-resources/**",
+                    "/webjars/**"
+                ).permitAll()
+                // WebSocket handshake (SockJS)
+                .requestMatchers("/ws/**").permitAll()
 
-                // Sprints — all 3 roles can read
+                // Sprints — all roles read
                 .requestMatchers(HttpMethod.GET,    "/api/sprints/**").hasAnyRole("MANAGER", "HR", "TRAINER")
-                // HR creates/deletes sprints
                 .requestMatchers(HttpMethod.POST,   "/api/sprints").hasRole("HR")
                 .requestMatchers(HttpMethod.DELETE, "/api/sprints/**").hasRole("HR")
-                // HR + TRAINER can update/change status
                 .requestMatchers(HttpMethod.PUT,    "/api/sprints/**").hasAnyRole("HR", "TRAINER")
                 .requestMatchers(HttpMethod.PATCH,  "/api/sprints/**").hasAnyRole("HR", "TRAINER")
 
-                // Attendance — TRAINER submits, all can read
-                .requestMatchers(HttpMethod.POST, "/api/attendance/**").hasRole("TRAINER")
-                .requestMatchers(HttpMethod.GET,  "/api/attendance/**").hasAnyRole("MANAGER", "HR", "TRAINER")
+                // Attendance — trainer submits/patches, all read
+                .requestMatchers(HttpMethod.POST,  "/api/attendance/**").hasRole("TRAINER")
+                .requestMatchers(HttpMethod.PATCH, "/api/attendance/**").hasRole("TRAINER")
+                .requestMatchers(HttpMethod.GET,   "/api/attendance/**").hasAnyRole("MANAGER", "HR", "TRAINER")
 
-                // Employees — MANAGER + HR manage, all can read
+                // Employees — manager + HR manage, all read
                 .requestMatchers(HttpMethod.GET,    "/api/employees/**").hasAnyRole("MANAGER", "HR", "TRAINER")
                 .requestMatchers(HttpMethod.POST,   "/api/employees/**").hasAnyRole("MANAGER", "HR")
                 .requestMatchers(HttpMethod.PUT,    "/api/employees/**").hasAnyRole("MANAGER", "HR")
                 .requestMatchers(HttpMethod.DELETE, "/api/employees/**").hasRole("MANAGER")
 
-                // Users (trainer/HR management) — MANAGER only
+                // Messages — all authenticated roles
+                .requestMatchers("/api/messages/**").authenticated()
+
+                // Users — manager only
                 .requestMatchers("/api/users/**").hasRole("MANAGER")
 
                 .anyRequest().authenticated()
@@ -70,12 +91,16 @@ public class SecurityConfig {
         return http.build();
     }
 
+    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:5174,http://localhost:3000}")
+    private String allowedOriginsRaw;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
+        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
+        config.setAllowedOrigins(origins);
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
